working till now

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Email Configuration
 VITE_SENDGRID_API_KEY=your_sendgrid_api_key_here
-VITE_EMAIL_FROM=noreply@eduunify.com
+VITE_EMAIL_FROM=noreply@eduunify.in
 VITE_SUPABASE_URL=https://aqbhhehyzbxlxdrudydw.supabase.co
 VITE_SUPABASE_PUBLISHABLE_KEY=sb_publishable_fK3Tcw7-sNdB-hQ2E0vDbA_WiZCAmJm
 
